feat(payroll): enrich salary PDF teams and fonts / 完善工资 PDF 分组与字体
EN:
- add team key normalization with bilingual labels and fallback handling in salary PDF export
- embed optional font and append font CSS for consistent Chinese rendering in reports
- tweak salary report template labels, spacing, and add PDF generation logs

ZH:
- 为工资 PDF 导出增加分组 key 归一化与双语标签及兜底逻辑
- 支持可选字体内嵌并追加字体样式以稳定中文渲染
- 调整工资报表模板标题/间距并补充 PDF 生成日志

--- a/module/salary.html
+++ b/module/salary.html
@@ -9,8 +9,8 @@
 <body>
     <div class="page landscape">
         <!-- Header -->
-        <h1 class="main-title">LISTE DE PAIEMENT DES SALAIRES DES TRAVAILLEURS DE LA DIRECTION （CRBC） {{teamLabel}}</h1>
-        <h2 class="sub-title">当地雇员工资发放表</h2>
+        <h1 class="main-title">LISTE DE PAIEMENT DES SALAIRES DES TRAVAILLEURS DE LA DIRECTION （CRBC） {{teamFr}}</h1>
+        <h2 class="sub-title">{{teamZh}} 当地雇员工资发放表</h2>
 
         <!-- Info Section -->
         <div class="info-section">
