fix(payroll): show totals only on last team page / 仅在班组末页展示合计行
EN:
- gate salary PDF total row rendering to the final page of each team
- add template placeholder rendering for optional total rows
- avoid empty total values on non-final pages

ZH:
- 仅在班组最后一页渲染工资合计行
- 在模板中引入可选的合计行占位渲染
- 避免非末页出现空的合计值

--- a/module/salary.html
+++ b/module/salary.html
@@ -58,15 +58,7 @@
                 {{rows}}
             </tbody>
             <tfoot>
-                <tr class="total-row">
-                    <td colspan="1" class="total-label">Total</td> <!-- Using colspan 1 and letting others flow or merge? Image shows Total under N° column basically or spanning? It spans N° and Matricule maybe? Actually looks like just in the first cell text aligned left with bold 'Total'. -->
-                    <td></td> <!-- Matricule col -->
-                    <td></td> <!-- Name col -->
-                    <td class="total-val">{{totalAmount}}</td>
-                    <td class="total-val">{{totalAdvance}}</td>
-                    <td class="total-val">{{totalPaid}}</td>
-                    <td></td>
-                </tr>
+                {{totalRow}}
             </tfoot>
         </table>
 
