feat(payroll): add attendance export zip / 工资发放新增考勤表导出zip
EN:
- add attendance ZIP export API with per-team CTJ/CDD PDFs and abort handling
- render presence templates with placeholders and font embedding support
- add payroll UI button and i18n copy for attendance export; add archiver dependency

ZH:
- 新增考勤表 ZIP 导出接口，按班组合并 CTJ/CDD PDF 并处理中断
- 考勤模板改为占位符渲染并支持字体嵌入
- 工资发放页新增考勤导出按钮与文案，新增 archiver 依赖

--- a/module/presence-cdd.html
+++ b/module/presence-cdd.html
@@ -13,16 +13,16 @@
         <!-- Header -->
         <div class="header-section">
             <div class="header-main">TRAVAUX DE VOIRIES URBAINES DANS LES VILLES DE TANDA ET BONDOUKOU 月工考勤表</div>
-            <div class="header-sub">FICHE DE PRESENCE DES EMPLOYES AU MOIS DE LA PERIODE DU 21/12/2025 AU 20/01/2026
+            <div class="header-sub">FICHE DE PRESENCE DES EMPLOYES AU MOIS DE LA PERIODE DU {{periodStart}} AU {{periodEnd}}
             </div>
         </div>
 
         <!-- Employee Info -->
         <div class="employee-info-grid">
             <div class="info-cell label">姓名 NOM</div>
-            <div class="info-cell value">PEREZ STANISLAS KOUADIO BI GOLY RAPHAEL</div>
+            <div class="info-cell value">{{employeeName}}</div>
             <div class="info-cell label">职位 FONCTION</div>
-            <div class="info-cell value">CHAUFFEUR DE BENNE</div>
+            <div class="info-cell value">{{employeeRole}}</div>
         </div>
 
         <!-- Main Table -->
@@ -64,319 +64,7 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- December 2025 -->
-                <tr class="bg-gray">
-                    <td>2025/12/21</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2025/12/22</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2025/12/23</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2025/12/24</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2025/12/25</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2025/12/26</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr class="bg-gray">
-                    <td>2025/12/27</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr class="bg-gray">
-                    <td>2025/12/28</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2025/12/29</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2025/12/30</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2025/12/31</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-
-                <!-- January 2026 -->
-                <tr>
-                    <td>2026/1/1</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/2</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr class="bg-gray">
-                    <td>2026/1/3</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr class="bg-gray">
-                    <td>2026/1/4</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/5</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/6</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/7</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/8</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/9</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr class="bg-gray">
-                    <td>2026/1/10</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr class="bg-gray">
-                    <td>2026/1/11</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/12</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/13</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/14</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/15</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/16</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr class="bg-gray">
-                    <td>2026/1/17</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr class="bg-gray">
-                    <td>2026/1/18</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/19</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2026/1/20</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
+                {{rows}}
             </tbody>
         </table>
 
