--- a/module/presence.html
+++ b/module/presence.html
@@ -14,17 +14,17 @@
         <div class="header-section">
             <div class="header-title-box">
                 <div class="header-main">TRAVAUX DE VOIRIES URBAINES DANS LES VILLES DE TANDA ET BONDOUKOU 日工考勤表</div>
-                <div class="header-sub">FICHE DE PRESENCE DES EMPLOYES JOURNALIER DE LA PERIODE DU 21/12/2025 AU
-                    05/01/2025</div>
+                <div class="header-sub">FICHE DE PRESENCE DES EMPLOYES JOURNALIER DE LA PERIODE DU {{periodStart}} AU
+                    {{periodEnd}}</div>
             </div>
         </div>
 
         <!-- Employee Info -->
         <div class="employee-info-grid">
             <div class="info-cell label">姓名 NOM & PRENOM</div>
-            <div class="info-cell value">NAYABE AMADOU</div>
+            <div class="info-cell value">{{employeeName}}</div>
             <div class="info-cell label">职位 FONCTION</div>
-            <div class="info-cell value">OUVRIER</div>
+            <div class="info-cell value">{{employeeRole}}</div>
         </div>
 
         <!-- Main Table -->
@@ -66,182 +66,7 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- Row 1 -->
-                <tr class="bg-gray">
-                    <td>2025/12/21</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 2 -->
-                <tr>
-                    <td>2025/12/22</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 3 -->
-                <tr>
-                    <td>2025/12/23</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 4 -->
-                <tr>
-                    <td>2025/12/24</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 5 -->
-                <tr>
-                    <td>2025/12/25</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 6 -->
-                <tr>
-                    <td>2025/12/26</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 7 -->
-                <tr class="bg-gray">
-                    <td>2025/12/27</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 8 -->
-                <tr class="bg-gray">
-                    <td>2025/12/28</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 9 -->
-                <tr>
-                    <td>2025/12/29</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 10 -->
-                <tr>
-                    <td>2025/12/30</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 11 -->
-                <tr>
-                    <td>2025/12/31</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 12 -->
-                <tr>
-                    <td>2026/1/1</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 13 -->
-                <tr>
-                    <td>2026/1/2</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 14 -->
-                <tr class="bg-gray">
-                    <td>2026/1/3</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 15 -->
-                <tr class="bg-gray">
-                    <td>2026/1/4</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td class="slash-cell"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- Row 16 -->
-                <tr>
-                    <td>2026/1/5</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
+                {{rows}}
             </tbody>
         </table>
 
